Bug 131033 - 3D rotation object with custom axis has wrong height
Summary: 3D rotation object with custom axis has wrong height
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-29 17:21 UTC by Regina Henschel
Modified: 2020-03-04 23:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
material for testing (9.66 KB, application/vnd.oasis.opendocument.graphics)
2020-02-29 17:21 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-02-29 17:21:37 UTC
Created attachment 158276 [details]
material for testing

Open attached document. It has a green and a red square to be rotated. The layer 'layer 4' has a gray line to indicate the proposed position of the rotation axis.

Mark the red square.
Click on "In 3D Rotation Object" in toolbar "Transformations". You get an axis with two handles.
Drag the handles to the end of the gray line.
Click outside to finish creating a 3D rotation object.
Notice, that you get a ring, but it is vertically compressed.

Mark the green square together with the green line.
Click on "In 3D Rotation Object" in toolbar "Transformations". You get an axis with two handles.
Drag the handles to the end of the gray line.
Click outside to finish creating a 3D rotation object.
Now the height is correct.

The path of the created object is a square in file format. But the automatically calculated height of the scene is wrong.
Comment 1 Commit Notification 2020-03-04 13:24:05 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a33484276ed16af7599a59653677f21f051c97e8

tdf#131033 consider 20° tilt of 3D in 2D projection

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.