tdf#131033 consider 20° tilt of 3D in 2D projection

Error was, that the default 20° tilt of a newly created 3D scene was
not applied to the rectangle for the 2D projection and therefore the
projection was not high enough. The used method is the same as used
when dragging a scene to tilt it. I don't know whether there exists
a simpler way.

Change-Id: Ic9745cc17ed520cd9e00b123e235fe0e93100073